--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
+
+#spring.thymeleaf.prefix=classpath:/views/
+
+server.port=8081
+spring.application.name=spring_smoke
+#server.servlet.context-path=/${spring.application.name}
+server.servlet.context-path=/spring_smoke
