one more MVC controller mapping

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,4 +7,4 @@ my:
           str-list:
             - pojo list for key1 element1
             - pojo list for key1 element2
-      prop0: hello!
+      prop0: hello!!!
