--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.jpa.show-sql=true
 
+## custom suffix - doesn't work now https://youtrack.jetbrains.com/issue/IDEA-345510
 #spring.thymeleaf.prefix=classpath:/views/
 
 server.port=8081
