--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,11 @@ spring.datasource.url=jdbc:h2:file:/data/demo
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.hikari.connection-test-query=select 1
+
 spring.jpa.hibernate.ddl-auto=none
-spring.sql.init.mode=always
 spring.jpa.show-sql=true
+spring.sql.init.mode=always
 
 ## custom suffix - doesn't work now https://youtrack.jetbrains.com/issue/IDEA-345510
 #spring.thymeleaf.prefix=classpath:/views/
@@ -13,3 +15,13 @@ server.port=8081
 spring.application.name=spring_smoke
 #server.servlet.context-path=/${spring.application.name}
 server.servlet.context-path=/spring_smoke
+
+#management.endpoint.env.enabled=false
+management.endpoint.env.show-values=always
+management.endpoints.web.exposure.include=*
+management.endpoint.configprops.show-values=always
+#management.server.port=8888
+
+my.conf.props.prop0=aaa\nbbb\nccc
+
+debug=true
