beans injection test and conditional beans

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:h2:file:~/data/demo
+spring.datasource.url=jdbc:h2:file:~/data/smoke
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
@@ -22,6 +22,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.configprops.show-values=always
 #management.server.port=8888
 
-my.conf.props.prop0=aaa\nbbb\nccc
+my.conf.props.prop0=conditions test
+my.conf.props.flag=true
 
 debug=true
