--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:h2:file:~/data/demo
+db_url=jdbc:h2:file:~/data/demo
+#spring.datasource.url=jdbc:h2:file:~/data/demo
+spring.datasource.url=${db_url}
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.datasource.driverClassName=org.h2.Driver
