--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,7 +22,7 @@ management.endpoints.web.exposure.include=*
 management.endpoint.configprops.show-values=always
 #management.server.port=8888
 
-my.conf.props.prop0=conditions test
+#my.conf.props.prop0=conditions test
 my.conf.props.flag=true
 
 debug=true
